tests/snapshots/run_wpt_conformance__onnx_lesser_float32_two_5D_inputs_with_identical_shapes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser float32 two 5D inputs with identical shapes",
    "onnx",
    "PASS",
)
