tests/snapshots/run_wpt_conformance__onnx_lesser_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "lesser.https.any.js",
    "lesser int32 4D tensors",
    "onnx",
    "PASS",
)
