tests/snapshots/run_wpt_conformance__onnx_linear_float16_0D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float16 0D tensor default options",
    "onnx",
    "PASS",
)
